[gd_scene load_steps=2 format=3 uid="uid://xd43yodq0766"]

[ext_resource type="Script" path="res://Scripts/roundstart_collector_script.gd" id="1_jadr0"]

[node name="RoundstartCollectorUi" type="Node2D"]
script = ExtResource("1_jadr0")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 546.0
offset_right = 1745.0
offset_bottom = 818.0
color = Color(0.691357, 0.691357, 0.691357, 1)

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 20.0
offset_top = 29.0
offset_right = 846.0
offset_bottom = 212.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 895.0
offset_top = 29.0
offset_right = 1721.0
offset_bottom = 212.0

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 718.0
offset_top = 243.0
offset_right = 1030.0
offset_bottom = 266.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Resolve all choices to be abel to go back."

[node name="Window_collector" type="HBoxContainer" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 29.0
offset_right = 846.0
offset_bottom = 212.0

[node name="Message_collector" type="VBoxContainer" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 895.0
offset_top = 30.0
offset_right = -24.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 846.0
offset_top = 212.0
offset_right = 895.0
offset_bottom = 243.0
text = "Done"

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
